@@ -1,3 +1,4 @@
+7/14/14 #77 add debug code for shown bounds of the 'balance scales' representation
 7/14/14 fix in GameModel.startGame: reset currentEquationIndex before using it to choose currentEquation
 7/14/14 #29 move Next, Try Again, and Show Answer buttons into game feedback dialog (when appropriate), remove from play area
 7/14/14 #76 replace complicated game popup types (5 files) with a single type, GameFeedbackDialog
